# src/API/swagger.json
@@ -321,17 +321,6 @@
     "ViewModelBase": {
       "allOf": [
         {
-          "$ref": "#/definitions/EntityModelBase"
-        },
-        {
-          "type": "object",
-          "x-abstract": true
-        }
-      ]
-    },
-    "EntityModelBase": {
-      "allOf": [
-        {
           "$ref": "#/definitions/SerializableBase"
         },
         {
@@ -356,7 +345,7 @@
     "BikeRouteModel": {
       "allOf": [
         {
-          "$ref": "#/definitions/EntityModelBase"
+          "$ref": "#/definitions/EntityModelBaseOfBikeRouteCreateModelAndBikeRouteUpdateModel"
         },
         {
           "type": "object",
@@ -386,7 +375,7 @@
     "GroupRideModel": {
       "allOf": [
         {
-          "$ref": "#/definitions/EntityModelBase"
+          "$ref": "#/definitions/EntityModelBaseOfGroupRideCreateModelAndGroupRideUpdateModel"
         },
         {
           "type": "object",
@@ -437,6 +426,46 @@
         4,
         5,
         6
+      ]
+    },
+    "EntityModelBaseOfGroupRideCreateModelAndGroupRideUpdateModel": {
+      "allOf": [
+        {
+          "$ref": "#/definitions/SerializableBase"
+        },
+        {
+          "type": "object",
+          "x-abstract": true,
+          "required": [
+            "Id"
+          ],
+          "properties": {
+            "Id": {
+              "type": "string",
+              "format": "guid"
+            }
+          }
+        }
+      ]
+    },
+    "EntityModelBaseOfBikeRouteCreateModelAndBikeRouteUpdateModel": {
+      "allOf": [
+        {
+          "$ref": "#/definitions/SerializableBase"
+        },
+        {
+          "type": "object",
+          "x-abstract": true,
+          "required": [
+            "Id"
+          ],
+          "properties": {
+            "Id": {
+              "type": "string",
+              "format": "guid"
+            }
+          }
+        }
       ]
     },
     "BikeRouteUpdateModel": {
